# LiteGPT

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  WEIGHT_LOADING.md  build.bat  compile.bat  download_weights.py  get_weights.bat  gpt2_config.json  gpt2_quant_config.json  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
include/: embedding.h  forward_pass.h  inference_engine.h  layers.h  matmul.h  model.h  tensor.h  tokenizer.h
scripts/: convert_weight.py  download_gpt2.py
src/: embedding.cpp  forward_pass.cpp  inference_engine.cpp  layers.cpp  main.cpp  matmul.cpp  model.cpp  tensor.cpp  tokenizer.cpp
